syntax = "proto3";
package proto;
option go_package = "./proto";

import "runner/proto/oscal.proto";

message ResultRequest { AssessmentResult Result = 1; }

message ResultResponse {}

service AddHelper { rpc AddResult(ResultRequest) returns (ResultResponse); }
