syntax = "proto3";
package proto;

option go_package = "./proto";

enum ExecutionStatus {
  SUCCESS = 0;
  FAILURE = 1;
}

message ConfigList {
  repeated string Items = 1;
}

message ConfigItem {
  string Key = 1;
  oneof Value {
    ConfigItemSet ValueConfig = 2;
    ConfigList ValueList = 3;
    string ValueString = 4;
    int32 ValueInt = 5;
  }
}

message ConfigItemSet {
  repeated ConfigItem items = 1;
}

message ConfigureRequest {
  ConfigItemSet config = 1;
}

message ConfigureResponse {
  bytes value = 1;
}

message EvalRequest {
  repeated string policyPaths = 1;
  uint32 apiServer = 2;
}

/**
 * EvalResponse is the result of an assessment check
 * Results are sent back by the plugins using the Result service defined
 * separately.
 */
message EvalResponse {
  ExecutionStatus status = 1;
}

service Runner {
  rpc Configure(ConfigureRequest) returns (ConfigureResponse);
  rpc Eval(EvalRequest) returns (EvalResponse);
}
